// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportsTable /> should display spinner when report is not ready 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-hover"
      data-testid="reports-table"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            ID
          </th>
          <th
            aria-label="Actions"
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="align-middle text-nowrap"
          >
            1234
          </td>
          <td
            class="text-end"
          >
            <div
              class="spinner-border spinner-border-sm text-primary"
              role="status"
            >
              <span
                class="sr-only"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<ReportsTable /> should handle lack of reports 1`] = `
<div>
  <p
    class="text-muted text-center"
  >
    There are no reports available.
  </p>
</div>
`;

exports[`<ReportsTable /> should render reports 1`] = `
<div>
  <div
    class="table-responsive"
  >
    <table
      class="table table-hover"
      data-testid="reports-table"
    >
      <thead
        class="thead-light"
      >
        <tr>
          <th
            scope="col"
          >
            ID
          </th>
          <th
            aria-label="Actions"
            scope="col"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            class="align-middle text-nowrap"
          >
            1234
          </td>
          <td
            class="text-end"
          >
            <div
              class="btn-group btn-group-sm text-nowrap"
              role="group"
            >
              <a
                class="btn btn-primary"
                download=""
                href="/reforis/diagnostics/api/reports/1234/contents"
              >
                <i
                  class="fa"
                />
                Download
              </a>
              <button
                class="btn btn-danger btn-sm d-inline-flex justify-content-center align-items-center"
                type="button"
              >
                <span>
                  <i
                    class="fa"
                  />
                  Delete
                </span>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
